add submodule esp_ota_update_server

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = esp_quali_uart
 	url = git@github.com:ci4rail/esp_quali_uart.git
 	branch = initial
+[submodule "esp_ota_update_server"]
+	path = esp_ota_update_server
+	url = git@github.com:ci4rail/esp_ota_update_server.git
+	branch = feature/ota_update_server
