--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = components/esp_ota_update_server
 	url = git@github.com:ci4rail/esp_ota_update_server.git
 	branch = feature/ota_update_server
+[submodule "esp_test_status_report"]
+	path = components/esp_test_status_report
+	url = git@github.com:ci4rail/esp_test_status_report.git
+	branch = feature/initial_commit
