--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dev/io4edge_api"]
 	path = dev/io4edge_api
 	url = https://github.com/ci4rail/io4edge_api
+[submodule "components/esp_io4edge_ttynvt"]
+	path = components/esp_io4edge_ttynvt
+	url = https://github.com/ci4rail/esp_io4edge_ttynvt.git
