--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,5 @@
-image: ci4rail/gitpod-esp:d36603f3
+image: ci4rail/gitpod-esp:ad797882
+
 tasks:
   - name: shell env
     before: |
@@ -10,10 +11,14 @@ tasks:
   - name: pre-commit install
     before: |
       echo 'PIP_USER="no"' >~/.bashrc.d/110-fix-pip-user
-      export PIP_USER="no" && pre-commit install && pre-commit
-  - name: wireguard
-    before: |
-      . /home/gitpod/start_wg.sh
+      export PIP_USER="no" && pre-commit install && pre-commit && git submodule foreach "pre-commit install && pre-commit"
+  - name: tailscaled
+    command: |
+      sudo tailscaled
+  - name: tailscale
+    command: |
+      sudo -E tailscale up --hostname "gitpod-${GITPOD_WORKSPACE_ID}" \
+                           --authkey "${TAILSCALE_AUTHKEY}"
   - name: compile firmware
     command: |
       ln -s build/compile_commands.json .
@@ -25,10 +30,18 @@ tasks:
       sed -i -e "/ZSH_THEME=/s/robbyrussell/agnoster/" ~/.zshrc
       sed -i -e "/plugins=/s/git/git zsh-autosuggestions/" ~/.zshrc
       zsh
+  - name: vscode settings
+    # terminal.integrated.localEchoLatencyThreshold disables local echo, which confuses me on, e.g. in gitpod
+    command: |
+      mkdir -p "$PWD/.vscode";
+      cat << 'EOF' > "$PWD/.vscode/settings.json"
+      {
+        "terminal.integrated.localEchoLatencyThreshold": -1,
+      }
+      EOF
 vscode:
   extensions:
     - llvm-vs-code-extensions.vscode-clangd
     - ms-vscode.cmake-tools
-
-# Required for wireguard
-experimentalNetwork: true
+    - zxh404.vscode-proto3
+    - twxs.cmake
